--- a/wp-content/themes/calidra/assets/css/scss/variables.scss
+++ b/wp-content/themes/calidra/assets/css/scss/variables.scss
@@ -1,7 +1,14 @@
 
+//Colores
+$ultra-light-grey: #808080;
 $light-grey: #4c4c4c;
+$dark-grey: #202020;
+$calidra-red: #ed1d24;
+
+//Breakpoints
 $xs: 320px;
-$sm: 360px;
+$sm: 576px;
 $md: 768px;
-$lg: 1200px;
-$xl: 1600px;
+$lg: 1024px;
+$xl: 1200px;
+$xxl: 1400px;
