--- a/wp-content/themes/calidra/assets/css/style.css
+++ b/wp-content/themes/calidra/assets/css/style.css
@@ -4,7 +4,7 @@
   position: relative;
   margin: 0 20px 0 0;
   -webkit-transform: rotate(0deg);
-  transform: rotate(0deg);
+          transform: rotate(0deg);
   -webkit-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
   cursor: pointer;
@@ -15,7 +15,7 @@
   position: absolute;
   height: 5px;
   width: 100%;
-  background: #d3531a;
+  background: #ed1d24;
   border-radius: 9px;
   opacity: 1;
   left: 0;
@@ -45,12 +45,12 @@
 
 .burger.open span:nth-child(2) {
   -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 
 .burger.open span:nth-child(3) {
   -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 
 .burger.open span:nth-child(4) {
@@ -120,27 +120,79 @@ body {
   width: 20%;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 1023px) {
+  .nav-container nav .logo {
+    margin-left: 10px;
+  }
+}
+
+.nav-container nav .burger {
+  position: relative;
+  z-index: 101;
+}
+
+@media screen and (min-width: 1024px) {
   .nav-container nav .burger {
     display: none;
   }
 }
 
-.nav-container nav ul {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-left: 20px;
-  font-size: #4c4c4c;
-  width: 80%;
-  display: none;
+@media screen and (max-width: 1023px) {
+  .nav-container nav .nav-ul.open {
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
+  }
 }
 
-@media screen and (min-width: 768px) {
-  .nav-container nav ul {
+@media screen and (max-width: 1023px) {
+  .nav-container nav .nav-ul {
+    display: block;
+    width: 100%;
+    height: 100vh;
+    background-color: #202020;
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    color: #808080;
+    padding-top: 80px;
+    -webkit-transition: all 500ms ease-in-out;
+    transition: all 500ms ease-in-out;
+    -webkit-transform: translate(100%, 0);
+            transform: translate(100%, 0);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .nav-container nav .nav-ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-left: 20px;
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .nav-container nav .nav-ul li {
+    text-align: center;
+    font-size: 2rem;
+    margin: 30px 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .nav-container nav .nav-ul li {
+    margin: 0 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nav-container nav .nav-ul li {
+    margin: 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
