--- a/wp-content/themes/calidra/assets/css/style.scss
+++ b/wp-content/themes/calidra/assets/css/style.scss
@@ -33,20 +33,55 @@ body{font-size: 1.4rem;line-height: 1.6rem; }
         padding: 20px 0;
         .logo{
             width: 20%;
+            @include maxWidth($lg - 1){
+                margin-left: 10px;
+            }
         }
         .burger{
-            @include minWidth($md){
+            position: relative;
+            z-index: 101;
+            @include minWidth($lg){
                 display: none;
             }
         }
-        ul{
-            justify-content: space-between;
-            margin-left: 20px;
-            font-size: $light-grey;
-            width: 80%;
-            display: none;
-            @include minWidth($md) {
+        .nav-ul{
+            &.open{
+                @include maxWidth($lg - 1){
+                    transform: translate(0, 0);
+                }
+            }
+            @include maxWidth($lg - 1){
+                display: block;
+                width: 100%;
+                height: 100vh;
+                background-color: $dark-grey;
+                position: fixed;
+                z-index: 100;
+                top: 0;
+                left: 0;
+                color: $ultra-light-grey;
+                padding-top: 80px;
+                transition: all 500ms ease-in-out;
+                transform: translate(100%, 0);
+            }
+            @include minWidth($lg){
                 display: flex;
+                justify-content: space-between;
+                margin-left: 20px;
+                width: 80%;
+            }
+            li{
+                @include maxWidth($lg - 1){
+                    text-align: center;
+                    font-size: 2rem;
+                    margin: 30px 0;
+                }
+                @include minWidth($lg){
+                    margin: 0 10px;
+                }
+                @include minWidth($xl){
+                    margin: 0;
+                }
             }
         }
     }
