--- a/wp-content/themes/calidra/assets/css/scss/variables.scss
+++ b/wp-content/themes/calidra/assets/css/scss/variables.scss
@@ -1,8 +1,12 @@
 
 //Colores
+$white-grey: #e3e3e3;
+$white-dark-grey: #dbdbdb;
 $ultra-light-grey: #808080;
 $light-grey: #4c4c4c;
-$dark-grey: #202020;
+$grey: #3e3e3e;
+$dark-grey: #2c2c2c;
+$ultra-dark-grey: #202020;
 $calidra-red: #ed1d24;
 
 //Breakpoints
@@ -12,3 +16,10 @@ $md: 768px;
 $lg: 1024px;
 $xl: 1200px;
 $xxl: 1400px;
+$xxxl: 1800px;
+
+//fuentes
+$century: 'Century Gothic', sans-serif;
+$open-sans: 'Open Sans Condensed', sans-serif;
+$lato: 'Lato', sans-serif;
+$montserrat: 'Montserrat', sans-serif;
