--- a/wp-content/themes/calidra/assets/css/scss/variables.scss
+++ b/wp-content/themes/calidra/assets/css/scss/variables.scss
@@ -9,6 +9,9 @@ $dark-grey: #2c2c2c;
 $ultra-dark-grey: #202020;
 $calidra-red: #ed1d24;
 
+//Sombras
+$outter-shadow: 1px 1px 8px rgba(0, 0, 0, 0.65);
+
 //Breakpoints
 $xs: 320px;
 $sm: 576px;
