Finished static content of sections and footer

--- a/wp-content/themes/calidra/assets/css/scss/variables.scss
+++ b/wp-content/themes/calidra/assets/css/scss/variables.scss
@@ -11,6 +11,7 @@ $calidra-red: #ed1d24;
 
 //Sombras
 $outter-shadow: 1px 1px 8px rgba(0, 0, 0, 0.65);
+$outter-glow: 1px 1px 8px rgba(255, 255, 255, 0.65);
 
 //Breakpoints
 $xs: 320px;
