--- a/wp-content/themes/calidra/assets/css/style.scss
+++ b/wp-content/themes/calidra/assets/css/style.scss
@@ -14,6 +14,46 @@ a, a:link, a:visited, a:focus{
         padding: 0;
     }
 }
+footer{
+    @include fullWidthSection();
+    background: url(../img/footer_pleca.png) bottom -10px center no-repeat;
+    background-size: contain;
+    font-family: $lato;
+    color: $grey;
+    @include fontLine(1.3rem, 1.8rem);
+    .top-footer{
+        padding-top: 30px;
+        ul{
+            font-weight: bold;
+            li{
+                margin-bottom: 3px;
+            }
+        }
+        .footer-correo{
+            i{
+                @include fontLine(2.5rem, 2.5rem);
+                margin-bottom: 10px;
+                &:nth-of-type(2){
+                    margin-top: 30px;
+                }
+            }
+        }
+    }
+    .footer-bottom{
+        margin-top: 100px;
+        background-color: $calidra-red;
+        color: #ffffff;
+        @include fontLine(1.2rem, 1.8rem);
+        font-family: $open-sans;
+        font-weight: bold;
+        &-border{
+            display: inline-block;
+            border-right: 2px solid #ffffff;
+            padding-right: 40px;
+            margin: 7px 0;
+        }
+    }
+}
 .nav-container{
     font-family: $open-sans;
     font-size: 1.5rem;
@@ -384,9 +424,16 @@ a, a:link, a:visited, a:focus{
     .container{
         display: flex;
         align-items: center;
+        justify-content: center;
         height: 100%;
+        @include minWidth($lg){
+            justify-content: flex-start;
+        }
         &.derecho{
-            justify-content: flex-end;
+            justify-content: center;
+            @include minWidth($lg){
+                justify-content: flex-end;
+            }
         }
         p{
             @include fontLine(4rem, 4rem);
@@ -395,11 +442,13 @@ a, a:link, a:visited, a:focus{
             font-family: $century;
             font-weight: bold;
             padding-bottom: 20px;
+            text-shadow: $outter-glow;
             @include minWidth($lg){
                 @include fontLine(8rem, 8rem);
             }
             &.blanco{
                 color: #ffffff;
+                text-shadow: $outter-shadow;
             }
         }
     }
@@ -643,7 +692,7 @@ a, a:link, a:visited, a:focus{
     .colabora-vacantes-cont{
         padding: 20px 0;
         @include minWidth($lg){
-            @include fontLine(4.5rem, 4.5rem);
+            @include fontLine(1.5rem, 2rem);
             background: rgb(26,26,26);
             background: linear-gradient(180deg, rgba(26,26,26,1) 0%, rgba(26,26,26,1) 50%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%);
             padding: 80px 0;
@@ -820,5 +869,176 @@ a, a:link, a:visited, a:focus{
                 }
             }
         }
+    }
+}
+.usos-cotidianos{
+    padding-top: 50px;
+    &-desc{
+        @include especificContainer(800px);
+        margin-bottom: 50px;
+        p{
+            margin-bottom: 20px;
+            font-family: $lato;
+            @include fontLine(1.5rem, 2rem);
+            color: $grey;
+        }
+    }
+    &-acordeon{
+        &-item{
+            padding: 30px 0;
+            border-bottom: 1px solid $ultra-light-grey;
+            &-header{
+                p{
+                    font-family: $century;
+                    @include fontLine(2.5rem, 2.2rem);
+                    @include minWidth($lg){
+                        @include fontLine(4rem, 3.7rem);
+                    }
+                    color: #000000;
+                    font-weight: bold;
+                }
+                .acordeon-down-arrow{
+                    width: 30px;
+                    height: 30px;
+                    background-color: $calidra-red;
+                    border-radius: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    @include minWidth($lg){
+                        width: 50px;
+                        height: 50px;
+                    }
+                    .flecha_down{
+                        border-left: 3px solid #ffffff;
+                        border-bottom: 3px solid #ffffff;
+                        transform: rotate(-45deg);
+                        width: 12px;
+                        height: 12px;
+                        margin-bottom: 6px;
+                        @include minWidth($lg){
+                            width: 18px;
+                            height: 18px;
+                            margin-bottom: 10px;
+    
+                        }
+                        &.is-active{
+                            transform: rotate(135deg);
+                            margin-bottom: -4px;
+                            @include minWidth($lg){
+                                margin-bottom: -5px;
+        
+                            }
+                        }
+                    }
+                }
+            }
+            &-body{
+                max-height: 0;
+                overflow: hidden;
+                transition: all 500ms ease-in-out;
+                &.is-active{
+                    max-height: 1000px;
+                }
+            }
+        }
+    }
+}
+.seccion-template{
+    &-desc{
+        @include especificContainer(800px);
+        color: $grey;
+        @include fontLine(1.5rem, 2rem);
+        margin-top: 60px;
+        margin-bottom: 60px;
+        font-family: $lato;
+        p{
+            margin-bottom: 20px;
+        }
+    }
+    &-productos{
+        h3{
+            text-align: center;
+            @include fontLine(5rem, 5rem);
+            font-family: $century;
+            color: $grey;
+            margin-bottom: 50px;
+        }
+    }
+    &-localizador{
+        background: url(../img/seccion_template/localizador_back.jpg) top center no-repeat;
+        background-size: cover;
+        color: #ffffff;
+        padding-top: 80px;
+        text-align: center;
+        &-cta{
+            display: inline-block;
+            text-align: left;
+            h3{
+                font-family: $century;
+                @include fontLine(3rem, 3.5rem);
+                margin-bottom: 20px;
+            }
+            p{
+                font-family: $lato;
+                margin-bottom: 30px;
+            }
+        }
+        button{
+            @include standardButton($ultra-dark-grey, #ffffff);
+        }
+    }
+    &-videos{
+        h3{
+            @include fontLine(5rem, 5rem);
+            font-family: $century;
+            color: $grey;
+            margin: 50px 0;
+        }
+        .video-cont{
+            width: 100%;
+            position: relative;
+            background: url(../img/seccion_template/video.jpg) center center no-repeat;
+            background-size: cover;
+            &.video-big{
+                height: 500px;
+            }
+            &.video-small{
+                height: 245px;
+                &:first-child{
+                    margin-bottom: 10px;
+                }
+            }
+            .black-screen{
+              position: absolute;
+              background-color: rgba(0, 0, 0, 0.5);
+              width: 100%;
+              height: 100%;
+              top: 0;
+              left: 0;
+              .play-button{
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                width: 100px;
+                height: 100px;
+                background-color: red;
+                border-radius: 100%;
+                .play-arrow{
+                    box-sizing: border-box;
+                    width: 44px;
+                    height: 44px;
+                    border-style: solid;
+                    border-width: 22px 0 22px 44px;
+                    border-color: transparent transparent transparent #ffffff;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-40%, -50%);
+                }
+              }
+            }
+          }
     }
 }
