--- a/wp-content/themes/calidra/assets/css/style.css
+++ b/wp-content/themes/calidra/assets/css/style.css
@@ -88,16 +88,6 @@ footer {
   line-height: 1.8rem;
 }
 
-@media screen and (max-width: 1023px) {
-  footer {
-    margin-left: -1.5rem;
-    margin-right: -1.5rem;
-    margin-top: -.75rem;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-}
-
 footer .top-footer {
   padding-top: 30px;
 }
@@ -106,8 +96,24 @@ footer .top-footer ul {
   font-weight: bold;
 }
 
+@media screen and (max-width: 1023px) {
+  footer .top-footer ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 footer .top-footer ul li {
   margin-bottom: 3px;
+}
+
+@media screen and (max-width: 1023px) {
+  footer .top-footer ul li {
+    width: 33.33333%;
+  }
 }
 
 footer .top-footer .footer-correo i {
@@ -120,6 +126,13 @@ footer .top-footer .footer-correo i:nth-of-type(2) {
   margin-top: 30px;
 }
 
+@media screen and (max-width: 1023px) {
+  footer .top-footer .redes {
+    padding-bottom: 30px;
+    text-align: center;
+  }
+}
+
 footer .footer-bottom {
   margin-top: 100px;
   background-color: #ed1d24;
@@ -128,6 +141,16 @@ footer .footer-bottom {
   line-height: 1.8rem;
   font-family: "Open Sans Condensed", sans-serif;
   font-weight: bold;
+}
+
+@media screen and (max-width: 1023px) {
+  footer .footer-bottom {
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
+    margin-top: -.75rem;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 footer .footer-bottom-border {
@@ -186,12 +209,18 @@ footer .footer-bottom-border {
 }
 
 .nav-container nav .logo {
-  width: 20%;
+  width: 30%;
 }
 
 @media screen and (max-width: 1023px) {
   .nav-container nav .logo {
     margin-left: 10px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .nav-container nav .logo {
+    width: 20%;
   }
 }
 
@@ -610,7 +639,7 @@ footer .footer-bottom-border {
 
 .contacto-banner {
   width: 100%;
-  height: 100vh;
+  height: 70vh;
   position: relative;
 }
 
@@ -716,6 +745,7 @@ footer .footer-bottom-border {
       -ms-flex-pack: center;
           justify-content: center;
   height: 100%;
+  padding: 0 15px;
 }
 
 @media screen and (min-width: 1024px) {
@@ -723,28 +753,20 @@ footer .footer-bottom-border {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
+    padding: 0;
   }
 }
 
 .seccion-hero .container.derecho {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-@media screen and (min-width: 1024px) {
-  .seccion-hero .container.derecho {
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-  }
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .seccion-hero .container p {
   font-size: 4rem;
   line-height: 4rem;
   color: #202020;
-  text-transform: capitalize;
   font-family: "Century Gothic", sans-serif;
   font-weight: bold;
   padding-bottom: 20px;
@@ -1476,11 +1498,18 @@ footer .footer-bottom-border {
 
 .seccion-template-productos h3 {
   text-align: center;
-  font-size: 5rem;
-  line-height: 5rem;
+  font-size: 4rem;
+  line-height: 4rem;
   font-family: "Century Gothic", sans-serif;
   color: #3e3e3e;
   margin-bottom: 50px;
+}
+
+@media screen and (min-width: 1024px) {
+  .seccion-template-productos h3 {
+    font-size: 5rem;
+    line-height: 5rem;
+  }
 }
 
 .seccion-template-localizador {
@@ -1489,6 +1518,16 @@ footer .footer-bottom-border {
   color: #ffffff;
   padding-top: 80px;
   text-align: center;
+}
+
+@media screen and (max-width: 1023px) {
+  .seccion-template-localizador {
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
+    margin-top: -.75rem;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .seccion-template-localizador-cta {
@@ -1528,11 +1567,18 @@ footer .footer-bottom-border {
 }
 
 .seccion-template-videos h3 {
-  font-size: 5rem;
-  line-height: 5rem;
+  font-size: 4rem;
+  line-height: 4rem;
   font-family: "Century Gothic", sans-serif;
   color: #3e3e3e;
   margin: 50px 0;
+}
+
+@media screen and (min-width: 1024px) {
+  .seccion-template-videos h3 {
+    font-size: 5rem;
+    line-height: 5rem;
+  }
 }
 
 .seccion-template-videos .video-cont {
@@ -1588,5 +1634,207 @@ footer .footer-bottom-border {
   left: 50%;
   -webkit-transform: translate(-40%, -50%);
           transform: translate(-40%, -50%);
+}
+
+.localizador {
+  padding-top: 50px;
+  padding-bottom: 0;
+}
+
+.localizador-buscador {
+  width: 800px;
+  max-width: 100%;
+  margin: 0 auto;
+  color: #2c2c2c;
+}
+
+.localizador-buscador h2 {
+  font-family: "Century Gothic", sans-serif;
+  font-size: 4rem;
+  line-height: 4rem;
+  font-weight: bold;
+  font-style: italic;
+  text-align: center;
+}
+
+.localizador-buscador p {
+  margin: 30px 0;
+}
+
+.localizador-buscador-input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.localizador-buscador-input input[type='text'] {
+  padding: 10px 15px;
+  color: #3e3e3e;
+  font-family: "Lato", sans-serif;
+  font-size: 1.6rem;
+  line-height: 2.1rem;
+  width: 80%;
+  height: 50px;
+  border: 1px solid #4c4c4c;
+}
+
+.localizador-buscador-input input[type='text']::-webkit-input-placeholder {
+  color: #3e3e3e;
+  font-family: "Lato", sans-serif;
+  font-size: 1.6rem;
+  line-height: 2.1rem;
+}
+
+.localizador-buscador-input input[type='text']:-ms-input-placeholder {
+  color: #3e3e3e;
+  font-family: "Lato", sans-serif;
+  font-size: 1.6rem;
+  line-height: 2.1rem;
+}
+
+.localizador-buscador-input input[type='text']::-ms-input-placeholder {
+  color: #3e3e3e;
+  font-family: "Lato", sans-serif;
+  font-size: 1.6rem;
+  line-height: 2.1rem;
+}
+
+.localizador-buscador-input input[type='text']::placeholder {
+  color: #3e3e3e;
+  font-family: "Lato", sans-serif;
+  font-size: 1.6rem;
+  line-height: 2.1rem;
+}
+
+.localizador-buscador-input button {
+  color: #ffffff;
+  border: none;
+  background-color: #ed1d24;
+  padding: 20px 50px;
+  font-family: 'Century Gothic', sans-serif;
+  font-weight: bold;
+  font-size: 1.5rem;
+  line-height: 1.5rem;
+  text-transform: uppercase;
+  display: inline-block;
+  width: 20%;
+  height: 50px;
+  padding: 0;
+}
+
+@media screen and (min-width: 1024px) {
+  .localizador-buscador-input button {
+    font-size: 2rem;
+    line-height: 2rem;
+  }
+}
+
+.localizador-mapa {
+  background: url(../img/localizador/mapa.jpg) top center no-repeat;
+  background-size: cover;
+  min-width: 100%;
+  height: 1000px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin-top: 50px;
+}
+
+@media screen and (min-width: 1024px) {
+  .localizador-mapa {
+    height: 800px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .localizador-mapa {
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
+  }
+}
+
+.localizador-mapa-info {
+  background-color: #202020;
+  background-image: url(../img/localizador/pleca.png);
+  background-position: bottom -20px center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100%;
+  color: #ffffff;
+  font-family: "Lato", sans-serif;
+  text-align: center;
+  padding: 60px 15px 30px;
+  position: relative;
+}
+
+@media screen and (min-width: 1024px) {
+  .localizador-mapa-info {
+    padding: 60px 0 100px;
+  }
+}
+
+.localizador-mapa-info .cerrar {
+  font-family: "Century Gothic", sans-serif;
+  font-size: 3rem;
+  line-height: 2rem;
+  background-color: #202020;
+  border-radius: 100%;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translate(-50%, -40%);
+          transform: translate(-50%, -40%);
+  padding-top: 20px;
+}
+
+.localizador-mapa-info p {
+  font-size: 1.3rem;
+  line-height: 1.8rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .localizador-mapa-info p {
+    font-size: 1.4rem;
+    line-height: 2rem;
+  }
+}
+
+.localizador-mapa-info-texto {
+  text-align: left;
+}
+
+.localizador-mapa-info-texto h4 {
+  color: #ed1d24;
+  font-size: 1.7rem;
+  line-height: 1.7rem;
+  margin-bottom: 10px;
+}
+
+@media screen and (min-width: 1024px) {
+  .localizador-mapa-info-texto h4 {
+    font-size: 2rem;
+    line-height: 2rem;
+  }
+}
+
+.localizador-mapa-info-texto h3 {
+  font-family: "Century Gothic", sans-serif;
+  font-size: 2rem;
+  line-height: 2rem;
+  margin-bottom: 25px;
+  font-style: italic;
+  font-weight: bold;
+}
+
+@media screen and (min-width: 1024px) {
+  .localizador-mapa-info-texto h3 {
+    font-size: 3rem;
+    line-height: 3rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
