--- a/wp-content/themes/calidra/assets/css/style.scss
+++ b/wp-content/themes/calidra/assets/css/style.scss
@@ -15,7 +15,6 @@ a, a:link, a:visited, a:focus{
     }
 }
 footer{
-    @include fullWidthSection();
     background: url(../img/footer_pleca.png) bottom -10px center no-repeat;
     background-size: contain;
     font-family: $lato;
@@ -25,8 +24,15 @@ footer{
         padding-top: 30px;
         ul{
             font-weight: bold;
+            @include maxWidth($lg - 1){
+                display: flex;
+                flex-wrap: wrap;
+            }
             li{
                 margin-bottom: 3px;
+                @include maxWidth($lg - 1){
+                    width: 33.33333%
+                }
             }
         }
         .footer-correo{
@@ -38,8 +44,15 @@ footer{
                 }
             }
         }
+        .redes{
+            @include maxWidth($lg - 1){
+                padding-bottom: 30px;
+                text-align: center;
+            }
+        }
     }
     .footer-bottom{
+        @include fullWidthSection();
         margin-top: 100px;
         background-color: $calidra-red;
         color: #ffffff;
@@ -81,9 +94,12 @@ footer{
         align-items: center;
         padding: 20px 0;
         .logo{
-            width: 20%;
+            width: 30%;
             @include maxWidth($lg - 1){
                 margin-left: 10px;
+            }
+            @include minWidth($lg){
+                width: 20%;
             }
         }
         .burger{
@@ -368,7 +384,7 @@ footer{
 }
 .contacto-banner{
     width: 100%;
-    height: 100vh;
+    height: 70vh;
     position: relative;
     @include minWidth($lg){
         height: 500px;
@@ -426,19 +442,17 @@ footer{
         align-items: center;
         justify-content: center;
         height: 100%;
+        padding: 0 15px;
         @include minWidth($lg){
             justify-content: flex-start;
+            padding: 0;
         }
         &.derecho{
-            justify-content: center;
-            @include minWidth($lg){
-                justify-content: flex-end;
-            }
+            justify-content: flex-end;
         }
         p{
             @include fontLine(4rem, 4rem);
             color: $ultra-dark-grey;
-            text-transform: capitalize;
             font-family: $century;
             font-weight: bold;
             padding-bottom: 20px;
@@ -959,7 +973,10 @@ footer{
     &-productos{
         h3{
             text-align: center;
-            @include fontLine(5rem, 5rem);
+            @include fontLine(4rem, 4rem);
+            @include minWidth($lg){
+                @include fontLine(5rem, 5rem);
+            }
             font-family: $century;
             color: $grey;
             margin-bottom: 50px;
@@ -971,6 +988,7 @@ footer{
         color: #ffffff;
         padding-top: 80px;
         text-align: center;
+        @include fullWidthSection();
         &-cta{
             display: inline-block;
             text-align: left;
@@ -990,7 +1008,10 @@ footer{
     }
     &-videos{
         h3{
-            @include fontLine(5rem, 5rem);
+            @include fontLine(4rem, 4rem);
+            @include minWidth($lg){
+                @include fontLine(5rem, 5rem);
+            }
             font-family: $century;
             color: $grey;
             margin: 50px 0;
@@ -1040,5 +1061,119 @@ footer{
               }
             }
           }
+    }
+}
+.localizador{
+    padding-top: 50px;
+    padding-bottom: 0;
+    &-buscador{
+        @include especificContainer(800px);
+        color: $dark-grey;
+        h2{
+            font-family: $century;
+            @include fontLine(4rem, 4rem);
+            font-weight: bold;
+            font-style: italic;
+            text-align: center;
+        }
+        p{
+            margin: 30px 0;
+        }
+        &-input{
+            display: flex;
+            input[type='text']{
+                padding: 10px 15px;
+                color: $grey;
+                font-family: $lato;
+                @include fontLine(1.6rem, 2.1rem);
+                width: 80%;
+                height: 50px;
+                border: 1px solid $light-grey;
+                &::placeholder{
+                    color: $grey;
+                    font-family: $lato;
+                    @include fontLine(1.6rem, 2.1rem);
+                }
+            }
+            button{
+                @include standardButton($calidra-red, #ffffff);
+                display: inline-block;
+                width: 20%;
+                height: 50px;
+                padding: 0;
+            }
+        }
+    }
+    &-mapa{
+        background: url(../img/localizador/mapa.jpg) top center no-repeat;
+        background-size: cover;
+        min-width: 100%;
+        height: 1000px;
+        display: flex;
+        align-items: flex-end;
+        margin-top: 50px;
+        @include minWidth($lg){
+            height: 800px;
+        }
+        @include maxWidth($lg - 1){
+            margin-left: -1.5rem;
+            margin-right: -1.5rem;
+        }
+        &-info{
+            background-color: $ultra-dark-grey;
+            background-image: url(../img/localizador/pleca.png);
+            background-position: bottom -20px center;
+            background-repeat: no-repeat;
+            background-size: contain;
+            width: 100%;
+            color: #ffffff;
+            font-family: $lato;
+            text-align: center;
+            padding: 60px 15px 30px;
+            position: relative;
+            @include minWidth($lg){
+                padding: 60px 0 100px;
+            }
+            .cerrar{
+                font-family: $century;
+                @include fontLine(3rem, 2rem);
+                background-color: $ultra-dark-grey;
+                border-radius: 100%;
+                width: 150px;
+                height: 150px;
+                position: absolute;
+                top: 0;
+                left: 50%;
+                transform: translate(-50%, -40%);
+                padding-top: 20px;
+            }
+            p{
+                @include fontLine(1.3rem, 1.8rem);
+                @include minWidth($lg){
+                    @include fontLine(1.4rem, 2rem);
+                }
+            }
+            &-texto{
+                text-align: left;
+                h4{
+                    color: $calidra-red;
+                    @include fontLine(1.7rem, 1.7rem);
+                    margin-bottom: 10px;
+                    @include minWidth($lg){
+                        @include fontLine(2rem, 2rem);
+                    }
+                }
+                h3{
+                    font-family: $century;
+                    @include fontLine(2rem, 2rem);
+                    margin-bottom: 25px;
+                    font-style: italic;
+                    font-weight: bold;
+                    @include minWidth($lg){
+                        @include fontLine(3rem, 3rem);
+                    }
+                }
+            }
+        }
     }
 }
